[package]
name = "tunic-cli"
version = "1.0.6"
edition = "2021"

[dependencies]
evm-engine = { path = "../evm-engine" }
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
self_update = "0.41"
colored = "2.1"

[[bin]]
name = "tunic"
path = "src/main.rs"
